--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       body { background-color: #fbfbf8; color: #1a1a1a; }
     </style>
 
-    <script type="importmap">
+ <!--   <script type="importmap">
     {
       "imports": {
         "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
@@ -49,7 +49,7 @@
         "path": "https://esm.sh/path@^0.12.7"
       }
     }
-    </script>
+    </script> -->
 </head>
 <body>
     <h2>[DEBUG] BEFORE ROOT</h2>
