--- a/index.html
+++ b/index.html
@@ -37,19 +37,20 @@
       body { background-color: #fbfbf8; color: #1a1a1a; }
     </style>
 
- <!--   <script type="importmap">
+   <script type="importmap">
     {
       "imports": {
         "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
         "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
         "react": "https://esm.sh/react@^19.2.3",
         "react/": "https://esm.sh/react@^19.2.3/",
-        "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+        "lucide-react": "https://esm.sh/lucide-react@^0.562.0" 
+       <!--,
         "fs": "https://esm.sh/fs@^0.0.1-security",
-        "path": "https://esm.sh/path@^0.12.7"
+        "path": "https://esm.sh/path@^0.12.7" -->
       }
     }
-    </script> -->
+    </script> 
 </head>
 <body>
     <h2>[DEBUG] BEFORE ROOT</h2>
